#    git diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* shakurov: Commit 61ba9b7fe9 has changed mutation semantics for unlock and tx abort. Update masters via snapshot.
* ifsmirnov: Changed semantics around required columns in replication log. Remove tablet cells before cluster update.
* ermolovd: New variant_tuple and variant_struct types. Update masters via snapshot.
* levysotsky: YT-8412: "operations_client" builtin user. Update masters via snapshot.
* babenko: Schedule delayed recomputation of membership closure on group removal. Update masters via snapshot.
* ifsmirnov: YT-10908. GetMountInfo and CheckPermission no longer modify access_time. Update masters via snapshot.
* shakurov: Master snapshot format was changed by 8b6665a6a2. Update masters via snapshot.
* babenko: Delayed recomputation of membership closure. Update masters via snapshot.
* ermolovd: Stricter schema validation. Update masters via snapshot.
* shakurov: Transaction abort has changed its sematics. Update masters via snapshot.
* babenko: YT-9991. Change use permission checks for bundles.  Update masters via snapshot.
* babenko: YT-10892. Apart from diagonistics; also fix TTableNodeProxy::GetBasicAttributes. Update masters via snapshot.
* aozeritsky: YT-9862. Update masters via snapshot.
* shakurov: A change in sematics of the "lock node" mutation was made by commit fdfd1e9966. Update masters via snapshot.
* shakurov: YT-10852. Update masters via snapshot.
* levysotsky: Changed TTableSchemas's operator==. Update masters via snapshot.
* aozeritsky: Update masters via snapshot.
* shakurov: Changed Hydra service protocol. Update masters via snapshot.