@@ -462,7 +462,7 @@ private:
 
             case EInternedAttributeKey::ParentIds:
                 BuildYsonFluently(consumer)
-                    .DoListFor(chunk->Parents(), [] (TFluentList fluent, const TChunkList* parent) {
+                    .DoListFor(chunk->Parents(), [] (TFluentList fluent, const TChunkTree* parent) {
                         fluent
                             .Item().Value(parent->GetId());
                     });
